# Beacon

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: backfill-images.yml  beacon.yml
data/: posts.json
docs/: CNAME  feed.xml  index.html
spec/: architecture-mermaid.md  architecture-plantuml.md  blueprint.md  info.md
src/: ai_processor.py  backfill_images.py  image_pick.py  main.py  renderer.py  scraper.py  storage.py
templates/: index.jinja2
