[project]
name = "beacon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.43.4",
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
    "openai>=2.34.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
